# ChangeLog for x11-proto/dri2proto
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-proto/dri2proto/ChangeLog,v 1.22 2009/10/26 20:48:15 jer Exp $

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> dri2proto-2.1.ebuild:
  Stable for HPPA (bug #282290).

  11 Oct 2009; nixnut <nixnut@gentoo.org> dri2proto-2.1.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org> dri2proto-2.1.ebuild:
  arm stable, bug #282290

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> dri2proto-2.1.ebuild:
  x86 stable, bug 282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> dri2proto-2.1.ebuild:
  amd64 stable wrt #282290

  23 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  dri2proto-1.99.3.ebuild:
  Stable on alpha for xorg-server-1.5/xorg-x11-7.4

  19 Jun 2009; Rémi Cardona <remi@gentoo.org> -dri2proto-1.1.ebuild,
  -dri2proto-2.0.ebuild:
  drop old ebuilds

*dri2proto-2.1 (13 Jun 2009)

  13 Jun 2009; Rémi Cardona <remi@gentoo.org> +dri2proto-2.1.ebuild:
  bump to 2.1

  15 May 2009; Raúl Porcel <armin76@gentoo.org> dri2proto-1.99.3.ebuild:
  arm/m68k/s390 stable

*dri2proto-2.0 (08 May 2009)

  08 May 2009; Rémi Cardona <remi@gentoo.org> +dri2proto-2.0.ebuild:
  bump to 2.0 (identical to 1.99.3)

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> dri2proto-1.1.ebuild,
  dri2proto-1.99.3.ebuild:
  fix repoman warnings

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> dri2proto-1.99.3.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> dri2proto-1.99.3.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  dri2proto-1.99.3.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> dri2proto-1.99.3.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> dri2proto-1.99.3.ebuild:
  Stable on amd64, bug #251832
