@@ -1,8 +1,6 @@
 DIST dri2proto-1.99.3.tar.bz2 42094 RMD160 f24d61dde1c0bd0f7fcad85d24b8ac149736cf44 SHA1 0be97cbc1440df50cd950b4b5f36e5fcb44a4ab7 SHA256 ee48d527fc1547c6f9959fda47720ca924b97862d79e25d0cc463b32d1cb7914
-DIST dri2proto-2.0.tar.bz2 50908 RMD160 e843c4b33aa31edc78030f873c10ec53cc421ba5 SHA1 cb6342ea88f57f7d0023abdf9a3ff6000f8e7a0f SHA256 1954a7e96d7fe70611c483836ed143e84a069eed6d3dab22c05a531bfb6da9e4
 DIST dri2proto-2.1.tar.bz2 51362 RMD160 deb31d24fe8cd2be48c1c7640383b1b99a0015b5 SHA1 1ba917531ff035287549d576097d7028bd3d037f SHA256 2b33f7c7658fb8f004c3aaf2717711262baeb5d77cf3fd24e9b6cc263895122d
-EBUILD dri2proto-1.99.3.ebuild 417 RMD160 ff658e55079bc0f32999f7b6b8fd76de0fb40d0f SHA1 411c8b3c2448cc2a51e34fd028e224d640b95ddd SHA256 f01cdffe6fe9b1969d41dc1725f2bcd9f44d1bbc07d9cc3f54e24432559db2a0
-EBUILD dri2proto-2.0.ebuild 435 RMD160 c8f608e080ecb4d223713836d77539b1a89389cc SHA1 865b0c1229c5172683181589def1d17d61927860 SHA256 832d6cf4a331859c68537305d8142b1bf0b7d648ac971410103362e7eeb2f435
-EBUILD dri2proto-2.1.ebuild 449 RMD160 b4c678bcfc72a34d4ea1fe29a0c42d0409d4125e SHA1 09b4aa451213a7379d74d68f48281266919b8969 SHA256 8dea0f2418ca04f07a1777eb177ac814e91a17414997294e91273381e464f947
-MISC ChangeLog 2936 RMD160 6ca5d3bbcd9fbd4db930c953bf063dc78107991a SHA1 786739c3092965f8b311292b926b40c6b7ae29c0 SHA256 16f7f02e57e9ed45e6419f8912eee39e8b7e8351f64245c0701f42275665a9b2
+EBUILD dri2proto-1.99.3.ebuild 399 RMD160 9f069346bc2b7f656f22a5d910778d54d622ef5c SHA1 b3a246b1c3efbd6c40e51fe176c2553cc1abb960 SHA256 7dd1a7986b52b1e438c5e0ff0d6b5f6f1a8cf4246192d080fdacccc0a8cee555
+EBUILD dri2proto-2.1.ebuild 438 RMD160 23a81f719e707a228d72cd36f9a21c730420412c SHA1 ea5f9484366b6e3ead2f6a190d9cf95b7a861c0b SHA256 d69a356ae58523baa56a6785e95b599b44ef9f822f6cd4fbcadba3c15e82c8bc
+MISC ChangeLog 3305 RMD160 dc5f5cd23bd9726760425512068f8c2853d2513b SHA1 0b16efb6673d5364c98375100167f58a718ac0f1 SHA256 aed3ab09bf8f69b27ced707727d5ee822c587d6c4788643b208a3b33a8439123
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
