@@ -1,12 +1,11 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/dri2proto/dri2proto-1.99.3.ebuild,v 1.12 2009/06/23 19:25:49 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/dri2proto/dri2proto-1.99.3.ebuild,v 1.13 2009/12/14 10:06:39 remi Exp $
 
 inherit x-modular
 
 DESCRIPTION="X.Org DRI2 protocol headers"
 
-LICENSE="X11"
 KEYWORDS="~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~x86-solaris"
 IUSE=""
 RDEPEND=""
