@@ -1,13 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/dri2proto/dri2proto-2.0.ebuild,v 1.1 2009/05/08 21:31:49 remi Exp $
-
-inherit x-modular
-
-DESCRIPTION="X.Org DRI2 protocol headers"
-
-LICENSE="X11"
-KEYWORDS="~x64-freebsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~x64-solaris ~x86-solaris"
-IUSE=""
-RDEPEND=""
-DEPEND="${RDEPEND}"
