@@ -1,12 +1,11 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/dri2proto/dri2proto-2.1.ebuild,v 1.6 2009/10/26 20:48:15 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/dri2proto/dri2proto-2.1.ebuild,v 1.9 2009/12/15 19:45:45 ranger Exp $
 
 inherit x-modular
 
 DESCRIPTION="X.Org DRI2 protocol headers"
 
-LICENSE="X11"
 KEYWORDS="~x64-freebsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux ~sparc-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 RDEPEND=""
